--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,8 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #0387d2;
-  --secondary: #0063b2;
+  --primary: #ffac00;
+  --secondary: #ff8939;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
