--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@ a {
   text-decoration: none;
   background-color: transparent; }
   a:hover {
-    color: #56b2dc;
+    color: #6c757d;
     text-decoration: underline; }
 
 a:not([href]) {
@@ -2092,7 +2092,7 @@ fieldset:disabled a.btn {
   color: #f8f9fa;
   border-color: #f8f9fa; }
   .btn-outline-light:hover {
-    color: #212529;
+    color: #ff8939;
     background-color: #f8f9fa;
     border-color: #f8f9fa; }
   .btn-outline-light:focus, .btn-outline-light.focus {
