--- a/css/styles.css
+++ b/css/styles.css
@@ -130,7 +130,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #ffac00;
+  color: #FFC03F;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -1784,8 +1784,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #ffac00;
-  border-color: #ffac00; }
+  background-color: #FFC03F;
+  border-color: #FFC03F; }
   .btn-primary:hover {
     color: #212529;
     background-color: #75c1e2;
@@ -1797,8 +1797,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(132, 182, 204, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #212529;
-    background-color: #ffac00;
-    border-color: #ffac00; }
+    background-color: #FFC03F;
+    border-color: #FFC03F; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
     color: #212529;
     background-color: #6bbce0;
@@ -1975,21 +1975,21 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #ffac00;
-  border-color: #ffac00; }
+  color: #FFC03F;
+  border-color: #FFC03F; }
   .btn-outline-primary:hover {
     color: #212529;
-    background-color: #ffac00;
-    border-color: #ffac00; }
+    background-color: #FFC03F;
+    border-color: #FFC03F; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(149, 207, 233, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #ffac00;
+    color: #FFC03F;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
     color: #212529;
-    background-color: #ffac00;
-    border-color: #ffac00; }
+    background-color: #FFC03F;
+    border-color: #FFC03F; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(149, 207, 233, 0.5); }
 
@@ -2128,7 +2128,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #ffac00;
+  color: #FFC03F;
   text-decoration: none; }
   .btn-link:hover {
     color: #56b2dc;
@@ -2365,7 +2365,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #ffac00; }
+    background-color: #FFC03F; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -2638,8 +2638,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #ffac00;
-    background-color: #ffac00; }
+    border-color: #FFC03F;
+    background-color: #FFC03F; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 0.2rem rgba(149, 207, 233, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -2685,8 +2685,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #ffac00;
-  background-color: #ffac00; }
+  border-color: #FFC03F;
+  background-color: #FFC03F; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
@@ -2853,7 +2853,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #ffac00;
+    background-color: #FFC03F;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2875,7 +2875,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #ffac00;
+    background-color: #FFC03F;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2900,7 +2900,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #ffac00;
+    background-color: #FFC03F;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2995,7 +2995,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #ffac00; }
+  background-color: #FFC03F; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3517,7 +3517,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -0.125rem;
   line-height: 1.25;
-  color: #ffac00;
+  color: #FFC03F;
   background-color: #fff;
   border: 0.125rem solid #dee2e6; }
   .page-link:hover {
@@ -3543,8 +3543,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #ffac00;
-  border-color: #ffac00; }
+  background-color: #FFC03F;
+  border-color: #FFC03F; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3610,7 +3610,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #212529;
-  background-color: #ffac00; }
+  background-color: #FFC03F; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #212529;
     background-color: #6bbce0; }
@@ -3819,7 +3819,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #ffac00;
+  background-color: #FFC03F;
   transition: width 0.6s ease; }
 
 @media (prefers-reduced-motion: reduce) {
@@ -3882,8 +3882,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #ffac00;
-    border-color: #ffac00; }
+    background-color: #FFC03F;
+    border-color: #FFC03F; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -4702,7 +4702,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #ffac00 !important; }
+  background-color: #FFC03F !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4802,7 +4802,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #ffac00 !important; }
+  border-color: #FFC03F !important; }
 
 .border-secondary {
   border-color: #ff8939 !important; }
@@ -7029,7 +7029,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #ffac00 !important; }
+  color: #FFC03F !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #56b2dc !important; }
@@ -7241,11 +7241,11 @@ h3 {
     #mainNav .navbar-nav li.nav-item a.nav-link {
       color: #fff; }
       #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-        color: #ffac00; }
+        color: #FFC03F; }
       #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
         color: #fff; }
       #mainNav .navbar-nav li.nav-item a.nav-link.active {
-        color: #ffac00; }
+        color: #FFC03F; }
   #mainNav .navbar-toggler {
     font-size: 80%;
     padding: 0.8rem; }
@@ -7262,10 +7262,10 @@ h3 {
       margin-top: 0; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: #fff;
-      background: #ffac00; }
+      background: #FFC03F; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: #fff;
-        background: #ffac00; }
+        background: #FFC03F; }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem; }
@@ -7328,7 +7328,7 @@ h3 {
   top: 1rem;
   font-size: 3rem;
   line-height: 3rem;
-  color: #ffac00;
+  color: #FFC03F;
   opacity: 1; }
 
 .floating-label-form-group {
@@ -7368,7 +7368,7 @@ h3 {
   opacity: 1; }
 
 .floating-label-form-group-with-focus label {
-  color: #ffac00; }
+  color: #FFC03F; }
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #e9ecef; }
@@ -7405,7 +7405,7 @@ form .row:first-child .floating-label-form-group {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  background-color: #ffac00;
+  background-color: #FFC03F;
   color: #fff;
   border-radius: 100%; }
 
