--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,8 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #ffac00;
-  --secondary: #ff8939;
+  --primary: #D9F367;
+  --secondary: #A1C20E;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
@@ -130,7 +130,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #FFC03F;
+  color: #D9F367;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -1784,8 +1784,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #FFC03F;
-  border-color: #FFC03F; }
+  background-color: #D9F367;
+  border-color: #D9F367; }
   .btn-primary:hover {
     color: #212529;
     background-color: #75c1e2;
@@ -1797,8 +1797,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(132, 182, 204, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #212529;
-    background-color: #FFC03F;
-    border-color: #FFC03F; }
+    background-color: #D9F367;
+    border-color: #D9F367; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
     color: #212529;
     background-color: #6bbce0;
@@ -1808,8 +1808,8 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #ff8939;
-  border-color: #ff8939; }
+  background-color: #A1C20E;
+  border-color: #A1C20E; }
   .btn-secondary:hover {
     color: #fff;
     background-color: #004e8c;
@@ -1821,8 +1821,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(38, 122, 190, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
     color: #fff;
-    background-color: #ff8939;
-    border-color: #ff8939; }
+    background-color: #A1C20E;
+    border-color: #A1C20E; }
   .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
     color: #fff;
     background-color: #00477f;
@@ -1975,40 +1975,40 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #FFC03F;
-  border-color: #FFC03F; }
+  color: #D9F367;
+  border-color: #D9F367; }
   .btn-outline-primary:hover {
     color: #212529;
-    background-color: #FFC03F;
-    border-color: #FFC03F; }
+    background-color: #D9F367;
+    border-color: #D9F367; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(149, 207, 233, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #FFC03F;
+    color: #D9F367;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
     color: #212529;
-    background-color: #FFC03F;
-    border-color: #FFC03F; }
+    background-color: #D9F367;
+    border-color: #D9F367; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(149, 207, 233, 0.5); }
 
 .btn-outline-secondary {
-  color: #ff8939;
-  border-color: #ff8939; }
+  color: #A1C20E;
+  border-color: #A1C20E; }
   .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #ff8939;
-    border-color: #ff8939; }
+    background-color: #A1C20E;
+    border-color: #A1C20E; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
     box-shadow: 0 0 0 0.2rem rgba(0, 99, 178, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #ff8939;
+    color: #A1C20E;
     background-color: transparent; }
   .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #ff8939;
-    border-color: #ff8939; }
+    background-color: #A1C20E;
+    border-color: #A1C20E; }
     .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(0, 99, 178, 0.5); }
 
@@ -2092,7 +2092,7 @@ fieldset:disabled a.btn {
   color: #f8f9fa;
   border-color: #f8f9fa; }
   .btn-outline-light:hover {
-    color: #ff8939;
+    color: #A1C20E;
     background-color: #f8f9fa;
     border-color: #f8f9fa; }
   .btn-outline-light:focus, .btn-outline-light.focus {
@@ -2128,7 +2128,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #FFC03F;
+  color: #D9F367;
   text-decoration: none; }
   .btn-link:hover {
     color: #56b2dc;
@@ -2365,7 +2365,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #FFC03F; }
+    background-color: #D9F367; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -2638,8 +2638,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #FFC03F;
-    background-color: #FFC03F; }
+    border-color: #D9F367;
+    background-color: #D9F367; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 0.2rem rgba(149, 207, 233, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -2685,8 +2685,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #FFC03F;
-  background-color: #FFC03F; }
+  border-color: #D9F367;
+  background-color: #D9F367; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
@@ -2853,7 +2853,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #FFC03F;
+    background-color: #D9F367;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2875,7 +2875,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #FFC03F;
+    background-color: #D9F367;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2900,7 +2900,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #FFC03F;
+    background-color: #D9F367;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2995,7 +2995,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #FFC03F; }
+  background-color: #D9F367; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3517,7 +3517,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -0.125rem;
   line-height: 1.25;
-  color: #FFC03F;
+  color: #D9F367;
   background-color: #fff;
   border: 0.125rem solid #dee2e6; }
   .page-link:hover {
@@ -3543,8 +3543,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #FFC03F;
-  border-color: #FFC03F; }
+  background-color: #D9F367;
+  border-color: #D9F367; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3610,7 +3610,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #212529;
-  background-color: #FFC03F; }
+  background-color: #D9F367; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #212529;
     background-color: #6bbce0; }
@@ -3620,7 +3620,7 @@ input[type="button"].btn-block {
 
 .badge-secondary {
   color: #fff;
-  background-color: #ff8939; }
+  background-color: #A1C20E; }
   a.badge-secondary:hover, a.badge-secondary:focus {
     color: #fff;
     background-color: #00477f; }
@@ -3819,7 +3819,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #FFC03F;
+  background-color: #D9F367;
   transition: width 0.6s ease; }
 
 @media (prefers-reduced-motion: reduce) {
@@ -3882,8 +3882,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #FFC03F;
-    border-color: #FFC03F; }
+    background-color: #D9F367;
+    border-color: #D9F367; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -4702,7 +4702,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #FFC03F !important; }
+  background-color: #D9F367 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4710,7 +4710,7 @@ button.bg-primary:focus {
   background-color: #6bbce0 !important; }
 
 .bg-secondary {
-  background-color: #ff8939 !important; }
+  background-color: #A1C20E !important; }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
@@ -4802,10 +4802,10 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #FFC03F !important; }
+  border-color: #D9F367 !important; }
 
 .border-secondary {
-  border-color: #ff8939 !important; }
+  border-color: #A1C20E !important; }
 
 .border-success {
   border-color: #28a745 !important; }
@@ -7029,13 +7029,13 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #FFC03F !important; }
+  color: #D9F367 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #56b2dc !important; }
 
 .text-secondary {
-  color: #ff8939 !important; }
+  color: #A1C20E !important; }
 
 a.text-secondary:hover, a.text-secondary:focus {
   color: #003866 !important; }
@@ -7190,15 +7190,15 @@ h3 {
     width: 100%;
     max-width: 7rem;
     height: 0.25rem;
-    background-color: #ff8939;
+    background-color: #A1C20E;
     border-radius: 1rem;
-    border-color: #ff8939 !important; }
+    border-color: #A1C20E !important; }
     .divider-custom .divider-custom-line:first-child {
       margin-right: 1rem; }
     .divider-custom .divider-custom-line:last-child {
       margin-left: 1rem; }
   .divider-custom .divider-custom-icon {
-    color: #ff8939 !important;
+    color: #A1C20E !important;
     font-size: 2rem; }
   .divider-custom.divider-light .divider-custom-line {
     background-color: #fff; }
@@ -7241,11 +7241,11 @@ h3 {
     #mainNav .navbar-nav li.nav-item a.nav-link {
       color: #fff; }
       #mainNav .navbar-nav li.nav-item a.nav-link:hover {
-        color: #FFC03F; }
+        color: #D9F367; }
       #mainNav .navbar-nav li.nav-item a.nav-link:active, #mainNav .navbar-nav li.nav-item a.nav-link:focus {
         color: #fff; }
       #mainNav .navbar-nav li.nav-item a.nav-link.active {
-        color: #FFC03F; }
+        color: #D9F367; }
   #mainNav .navbar-toggler {
     font-size: 80%;
     padding: 0.8rem; }
@@ -7262,10 +7262,10 @@ h3 {
       margin-top: 0; }
     #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
       color: #fff;
-      background: #FFC03F; }
+      background: #D9F367; }
       #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
         color: #fff;
-        background: #FFC03F; }
+        background: #D9F367; }
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
     padding-bottom: 0.5rem; }
@@ -7328,7 +7328,7 @@ h3 {
   top: 1rem;
   font-size: 3rem;
   line-height: 3rem;
-  color: #FFC03F;
+  color: #D9F367;
   opacity: 1; }
 
 .floating-label-form-group {
@@ -7368,7 +7368,7 @@ h3 {
   opacity: 1; }
 
 .floating-label-form-group-with-focus label {
-  color: #FFC03F; }
+  color: #D9F367; }
 
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #e9ecef; }
@@ -7376,7 +7376,7 @@ form .row:first-child .floating-label-form-group {
 .footer {
   padding-top: 5rem;
   padding-bottom: 5rem;
-  background-color: #ff8939;
+  background-color: #A1C20E;
   color: #fff; }
 
 .copyright {
@@ -7405,7 +7405,7 @@ form .row:first-child .floating-label-form-group {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  background-color: #FFC03F;
+  background-color: #D9F367;
   color: #fff;
   border-radius: 100%; }
 
